--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>d3关系图</title>
   <link rel="stylesheet" href="/css/index.css">
   <script src="/bower_components/d3/d3.js"></script>
+  <script src="/bower_components/d3-tip/index.js"></script>
 </head>
 <body>
 </body>
