--- a/typo.html
+++ b/typo.html
@@ -32,12 +32,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="top-nav">
 					<span class="icon"><img src="images/menu.png" alt=""> </span>
-					<ul>
-						<li ><a href="about.html" >About  </a> </li>
-						<li><a href="typo.html"  >Typo</a></li>
-						<li><a href="Blog.html" >Blog </a></li>
-						<li><a href="contact.html" >Contact </a></li>
-					</ul>
+					
+						<ul>
+            <li ><a href="about.html" >About  </a> </li>
+            <li><a href="typo.html"  >Typo</a></li>
+            <li><a href="Blog.html" >Blog </a></li>
+            <li><a href="contact.html" >Contact </a></li>
+          </ul>
+					
 					<!--script-->
 				<script>
 					$("span.icon").click(function(){
@@ -51,12 +53,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!---->
 				<div class="top-menu">					
 					<ul>
-						<li ><a href="about.html" data-hover="About">About  </a> </li>
-						<li><a href="typo.html" data-hover="Typo" >Typo</a></li>
-						<li><a href="index.html"><img src="images/logo.png" alt="" ></a></li>
-						<li><a href="blog.html" data-hover="Blog">Blog </a></li>
-						<li><a href="contact.html" data-hover="Contact">Contact </a></li>
-					</ul>
+            <li ><a href="about.html" data-hover="first">first  </a> </li>
+            <li><a href="typo.html" data-hover="second" >second</a></li>
+            <li><a href="index.html">third</a></li>
+            <li><a href="blog.html" data-hover="fourth">fourth </a></li>
+            <li><a href="contact.html" data-hover="fifth">fifth </a></li>
+          </ul>
 				</div>
 					<!--script-->							
 		</div>		
