--- a/blog.html
+++ b/blog.html
@@ -52,11 +52,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!---->
 				<div class="top-menu">					
 					<ul>
-						<li ><a href="about.html" data-hover="About">About  </a> </li>
-						<li><a href="typo.html" data-hover="Typo" >Typo</a></li>
-						<li><a href="index.html"><img src="images/logo.png" alt="" ></a></li>
-						<li><a href="blog.html" data-hover="Blog">Blog </a></li>
-						<li><a href="contact.html" data-hover="Contact">Contact </a></li>
+						<li ><a href="about.html" data-hover="first">first  </a> </li>
+						<li><a href="typo.html" data-hover="second" >second</a></li>
+						<li><a href="index.html">third</a></li>
+						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
+						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
 					</ul>
 				</div>
 					<!--script-->							
@@ -74,7 +74,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-8 sed-in">
 						<h4><a href="single.html">SED LOREET ALIQUAM LEOTELLUS DOLOR DAPIBUS</a></h4>				
 							<ul class="blog-ic">
-								<li><a href="#"><span> <i  class="glyphicon glyphicon-user"> </i>Super user</span> </a> </li>
+								<li><a href="#"><span> <i  class="glyphicon glyphicon-user"> </i>Super user</span> </a
+									\> </li>
 		  						 <li><span><i class="glyphicon glyphicon-time"> </i>June 14, 2013</span></li>		  						 	
 		  						 <li><span><i class="glyphicon glyphicon-eye-open"> </i>Hits:145</span></li>
 		  					</ul>		  						
