--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-nav">
 					<span class="icon"><img src="images/menu.png" alt=""> </span>
 					<ul>
-						<li ><a href="about.html">About  </a> </li>
-						<li><a href="typo.html"  >Typo</a></li>
-						<li><a href="Blog.html" >Blog </a></li>
-						<li><a href="contact.html" >Contact </a></li>
+						<li ><a href="about.html" >first  </a> </li>
+						<li><a href="typo.html"  >second</a></li>
+						<li><a href="Blog.html" >fourth </a></li>
+						<li><a href="contact.html" >fifth </a></li>
 					</ul>
 					<!--script-->
 				<script>
@@ -51,11 +51,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!---->
 				<div class="top-menu">					
 					<ul>
-						<li ><a href="about.html" data-hover="About">About  </a> </li>
-						<li><a href="typo.html" data-hover="Typo" >Typo</a></li>
-						<li><a href="index.html"><img src="images/logo.png" alt="" ></a></li>
-						<li><a href="blog.html" data-hover="Blog">Blog </a></li>
-						<li><a href="contact.html" data-hover="Contact">Contact </a></li>
+						<li ><a href="about.html" data-hover="first">first  </a> </li>
+						<li><a href="typo.html" data-hover="second" >second</a></li>
+						<li><a href="index.html">third</a></li>
+						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
+						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
 					</ul>
 				</div>
 					<!--script-->							
