--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-menu">
 					<ul>
 						<li ><a href="about.html" data-hover="first">first  </a> </li>
-						<li><a href="typo.html" data-hover="second" >second</a></li>
+						<li><a href="page/relation-0.html" data-hover="second" >second</a></li>
 						<li><a href="index.html">third</a></li>
 						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
 						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
@@ -136,26 +136,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <li data-target="#myCarousel" data-slide-to="2"></li>
    </ol>   
    <!-- 轮播（Carousel）项目 -->
-   <div class="carousel-inner">
-      <div class="item active">石头留念,1</div>
-<div class="item">晚上睡觉喜欢穿动物园系列睡衣,1</div>
-<div class="item">散打,1</div>
-<div class="item">针灸,1</div>
-<div class="item">嘻哈,1</div>
-<div class="item">写诗,1</div>
-<div class="item">摇滚,1</div>
-<div class="item">抽烟,1</div>
-<div class="item">宿醉,1</div>
-<div class="item">追民谣,1</div>
-<div class="item">谈人生理想,1</div>
-<div class="item">思考,1</div>
-<div class="item">拔火罐(有全套的火罐),1</div>
-<div class="item">读人,1</div>
-<div class="item">新闻,1</div>
-<div class="item">自黑,1</div>
-<div class="item">电音,1</div>
-<div class="item">扯淡,1</div>
-<div class="item">模型,1</div>
+   <div class="carousel-inner" style="font-family:Microsoft YaHei;color:red;">
+<div class="item active">挖耳屎，看耳屎</div>
+<div class="item">晚上睡觉喜欢穿动物园系列睡衣</div>
+<div class="item">读人</div>
+<div class="item">针灸</div>
+<div class="item">嗑瓜子</div>
+<div class="item">宿醉</div>
+<div class="item">嫖娼</div>
+<div class="item">拔火罐(有全套的火罐)</div>
+
+
+
    </div>
    <!-- 轮播（Carousel）导航 -->
    
