--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Decoline A Interior Category Flat Bootstarp Resposive Website Template | About :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -20,10 +19,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="keywords" content="Decoline Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+ <meta charset="UTF-8">
+    <title>百年阿里414</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 <!--header-->
-<div class="header header-top">
+<div class="header1 header-top1">
 	<div class="container">
 		<!---->
 			<div class="header-logo">
@@ -52,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-menu">					
 					<ul>
 						<li ><a href="about.html" data-hover="first">first  </a> </li>
-						<li><a href="typo.html" data-hover="second" >second</a></li>
+						<li><a href="page/relation-0.html" data-hover="second" >second</a></li>
 						<li><a href="index.html">third</a></li>
 						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
 						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
@@ -63,110 +65,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!--//header-->
 <!--content-->
-	<div class="container">
-		<div class="about">
-			<div class="about-top">
-				<h1>ABOUT US</h1>
-				<div class="about-in-top">
-					<div class="col-md-8 top-about">
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam.
-							 quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
-							 , quis nostrum exercitationem ullam corporis suscipit laboriosam.
-							 But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</p>
-					</div>
-					<div class="col-md-4 about-in">
-						<a href="single.html"><img class="img-responsive" src="images/ab.jpg" alt=" "></a>
-					</div>
-				<div class="clearfix"> </div>
-			</div>
-			</div>
-		<div class="about-info">
-			
-				<div class="col-md-6 bottom-about">
-				<a href="single.html"><img class="img-responsive" src="images/ab1.jpg" alt=""></a>
-			</div>
-				<div class="col-md-6 info-grid-right">
-				<h2>Frequently Asked Questions</h2>
-						 <div class="menu_vertical">
-					         	<section class="accordation_menu">
-								<div>
-								 <input id="label-1" name="lida" type="radio" checked/>
-									 <label for="label-1" id="item1"><i class="ferme"> </i><span class="m_5">Tetuer adipiscing elit lorem ipsum</span><i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>
-									    <div class="content1" id="a1">
-											 <h5>Lorem ipsum dolor sit amet</h5>
-							  			   	<p>Phasellus in magna quis quam lobortis fermentum a eget ipsum.Praesent sodales pretium tellus, et euismod.</p>
-									    </div>
-									  </div>
-									  <div>
-									    <input id="label-2" name="lida" type="radio"/>
-									    <label for="label-2" id="item2"><i class="icon-leaf" id="i2"></i>Sed egestas ,ante et vulputate <i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>
-									    <div class="content1" id="a2">
-											 <h5>Lorem ipsum dolor sit amet</h5>
-							  			   	<p>Phasellus in magna quis quam lobortis fermentum a eget ipsum.Praesent sodales pretium tellus, et euismod.</p>
-									    </div>
-									  </div>
-									  <div>
-									    <input id="label-3" name="lida" type="radio"/>
-									    <label for="label-3" id="item3"><i class="icon-trophy" id="i3"></i>Integer vitae libero ac risus egestas<i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>
-									    <div class="content1" id="a3">
-											 <h5>Lorem ipsum dolor sit amet</h5>
-							  			   	<p>Phasellus in magna quis quam lobortis fermentum a eget ipsum.Praesent sodales pretium tellus, et euismod.</p>
-									    </div>
-									  </div>
-									   <div>
-									    <input id="label-4" name="lida" type="radio"/>
-									    <label for="label-4" id="item4"><i class="icon-trophy" id="i4"></i>Donec quis dui at dolor tempor <i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>
-									    <div class="content1" id="a4">
-											 <h5>Lorem ipsum dolor sit amet</h5>
-							  			   	<p>Phasellus in magna quis quam lobortis fermentum a eget ipsum.Praesent sodales pretium tellus, et euismod.</p>
-									    </div>
-									  </div>
-                          </div>
-			</div>
-			
-			 <div class="clearfix"> </div>
-		
-			</div>
-
-		</div>		
-	</div>
-<!--//content-->
-<!--footer-->
-<div class="footer">
-		<div class="container">
-			<div class="footer-top">
-				<div class="col-md-4 footer-grid">
-				<h4>Decoline</h4>
-				<p class="flan">443 Flanigan Oaks Drive<span>
-					Alexandria, MD 22304</span></p>
-				<p>Phone : <label>+1 234 567890</label></p>
-				<p>Mail: <a href="mailto:info@example.com">info@example.com</a></p>
-				</div>
-				<div class="col-md-5 footer-grid-top ">	
-						<div class="enter">
-						<form>
-							<input type="text" value=" SUBSCRIBE" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'SUBSCRIBE';}">	
-							<input type="submit" value="">
-						</form>	
-						</div>
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-<span>Excepteur sint occaecat cupidatat non proident, suntin culpa qui officia deserunt</span></p>						
-				</div>
-				<div class="col-md-3 footer-grid-bottom ">
-					<h4>Follow us:</h4>
-					<ul class="social">
-						<li><a href="#"><i></i></a> </li>
-						<li><a href="#"><i class="facebook"></i></a></li>
-						<li><a href="#"><i class="linkedin"></i> </a></li>		
-						<li><a href="#"><i class="dribbble"></i> </a></li>						
-					</ul>
-				</div>
-				
-				<div class="clearfix"> </div>
-			</div>
-				<p class="footer-class"> © 2015 Decoline All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
-		</div>
-	</div>
+<div id="doc">
+<div id="pic-1" class='small-pic'></div>
+<div id="pic-2" class='small-pic'></div>
+<div id="pic-3" class='small-pic'></div>
+<div id="pic-4" class='small-pic'></div>
+<div id="pic-5" class='small-pic'></div>
+<div id="pic-6" class='small-pic'></div>
+<div id="pic-7" class='small-pic'></div>
+</div>	
 <!--//footer-->
 </body>
 </html>
