去除pattern解决性能，hover stroke需要再看

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="/bower_components/d3-tip/index.js"></script>
 </head>
 <body>
+    <div id="chart"></div>
 </body>
 <script src="/src/forceMap.js"></script>
 <script src="/src/index.js"></script>
