--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <div id="chart"></div>
+    <!-- <svg>
+        <defs>
+            <mask id="mask">
+                <circle cx="25" cy="25" r="25" fill="white"></circle>
+            </mask>
+            <g id="component">
+                <circle cx="25" cy="25" r="25" stroke="red" fill="transparent">
+                </circle>
+                <image xlink:href="https://work.alibaba-inc.com/photo/103313.120x120.jpg" mask="url(#mask)" width="50" height="50"></image>
+            </g>
+        </defs>
+        <g>
+            <use class="primary" xlink:href="#component"></use>
+        </g>
+    </svg> -->
 </body>
 <script src="/src/forceMap.js"></script>
 <script src="/src/index.js"></script>
