--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!--A Design by W3layouts 
+<!--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -12,11 +12,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Decoline Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+<meta name="keywords" content="Decoline Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
  <meta charset="UTF-8">
@@ -46,22 +46,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						$(".top-nav ul").slideToggle(500, function(){
 						});
 					});
-			</script>				
+			</script>
 		</div>
 		<div class="clearfix"> </div>
 			</div>
 			<!---->
-				<div class="top-menu">					
+				<div class="top-menu">
 					<ul>
-						<li ><a href="about.html" data-hover="first">first  </a> </li>
-						<li><a href="page/relation-0.html" data-hover="second" >second</a></li>
-						<li><a href="index.html">third</a></li>
-						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
-						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
+						<li ><a href="/about.html" data-hover="first">first  </a> </li>
+                        <li><a href="/page/relation-0.html" data-hover="second" >second</a></li>
+                        <li><a href="/index.html">third</a></li>
+                        <li><a href="/page/relation-3.html" data-hover="fourth">fourth </a></li>
+                        <li><a href="/page/relation-3.html" data-hover="fifth">fifth </a></li>
 					</ul>
 				</div>
-					<!--script-->							
-		</div>		
+					<!--script-->
+		</div>
 </div>
 <!--//header-->
 <!--content-->
@@ -73,7 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div id="pic-5" class='small-pic'></div>
 <div id="pic-6" class='small-pic'></div>
 <div id="pic-7" class='small-pic'></div>
-</div>	
+</div>
 <!--//footer-->
 </body>
 </html>
