--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Decoline A Interior Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>百年阿里414</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -11,7 +11,7 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 
 <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-<script src="js/jquery.min.js"></script>
+
 <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
 
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li ><a href="about.html" >first  </a> </li>
 						<li><a href="typo.html"  >second</a></li>
-						<li><a href="Blog.html" >fourth </a></li>
+						<li><a href="page/relation-3.html" >fourth </a></li>
 						<li><a href="contact.html" >fifth </a></li>
 					</ul>
 					<!--script-->
@@ -58,76 +58,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-menu">
 					<ul>
 						<li ><a href="about.html" data-hover="first">first  </a> </li>
-						<li><a href="page/relation-0.html" data-hover="second" >second</a></li>
-						<li><a href="index.html">third</a></li>
-						<li><a href="blog.html" data-hover="fourth">fourth </a></li>
-						<li><a href="contact.html" data-hover="fifth">fifth </a></li>
+                        <li><a href="/page/relation-0.html" data-hover="second" >second</a></li>
+                        <li><a href="index.html">third</a></li>
+                        <li><a href="/page/relation-3.html" data-hover="fourth">fourth </a></li>
+                        <li><a href="/page/relation-3.html" data-hover="fifth">fifth </a></li>
 					</ul>
 
 				</div>
-					<!--script-->
-					<!--
-					 <div class="banner">
-            <div class="slider">
-                  <section class="slider">
-                      <div class="flexslider">
-                      <ul class="slides">
 
-                      <li>
-                      	<div class="banner-matter">
-			<h3 >起来嗨 </h3>
-
-		</div>
-  	    		</li>
- 	    		<li>
-                      	<div class="banner-matter">
-			<h3>噢，原来是这样  </h3>
-
-		</div>
-  	    		</li>
-  	    		<li>
-                      <div class="banner-matter">
-			<h3>咦，我在哪里 </h3>
-
-		</div>
-  	    		</li>
-  	    		<li>
-                      	<div class="banner-matter">
-			<h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </h3>
-			<a href="single.html" class="hvr-rectangle-out">Read More</a>
-		</div>
-  	    		</li>
-  	    		<li>
-                      	<div class="banner-matter">
-			<h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </h3>
-			<a href="single.html" class="hvr-rectangle-out">Read More</a>
-		</div>
-  	    		</li>
-          </ul>
-        </div>
-
-
-      </section>
-			  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
-
-			  <script defer src="js/jquery.flexslider.js"></script>
-			  <script type="text/javascript">
-			    $(function(){
-			      SyntaxHighlighter.all();
-			    });
-			    $(window).load(function(){
-			      $('.flexslider').flexslider({
-			        animation: "slide",
-			        start: function(slider){
-			          $('body').removeClass('loading');
-			        }
-			      });
-			    });
-			  </script>
-			</div>
 </div>
--->
-
 <div id="myCarousel" class="carousel slide">
    <!-- 轮播（Carousel）指标 -->
    <ol class="carousel-indicators">
@@ -136,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <li data-target="#myCarousel" data-slide-to="2"></li>
    </ol>
    <!-- 轮播（Carousel）项目 -->
-   <div class="carousel-inner" style="font-family:Microsoft YaHei;color:red;">
+   <div class="carousel-inner" style="font-family:Microsoft YaHei;color:black;">
 <div class="item active">挖耳屎，看耳屎</div>
 <div class="item">晚上睡觉喜欢穿动物园系列睡衣</div>
 <div class="item">读人</div>
