--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-menu">
 					<ul>
 						<li ><a href="/about.html" data-hover="first">first  </a> </li>
-                        <li><a href="/page/relation-0.html" data-hover="second" >second</a></li>
+                        <li><a href="page/relation-0.html" data-hover="second" >second</a></li>
                         <li><a href="/index.html">third</a></li>
-                        <li><a href="/page/relation-3.html" data-hover="fourth">fourth </a></li>
-                        <li><a href="/page/relation-3.html" data-hover="fifth">fifth </a></li>
+                        <li><a href="page/relation-3.html" data-hover="fourth">fourth </a></li>
+                        <li><a href="page/relation-3.html" data-hover="fifth">fifth </a></li>
 					</ul>
 				</div>
 					<!--script-->
