--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ç™¾å¹´é˜¿é‡Œ414</title>
+<title>°ÙÄê°¢Àï414</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -58,37 +58,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="top-menu">
 					<ul>
 						<li ><a href="about.html" data-hover="first">first  </a> </li>
-                        <li><a href="/page/relation-0.html" data-hover="second" >second</a></li>
+                        <li><a href="page/relation-0.html" data-hover="second" >second</a></li>
                         <li><a href="index.html">third</a></li>
-                        <li><a href="/page/relation-3.html" data-hover="fourth">fourth </a></li>
-                        <li><a href="/page/relation-3.html" data-hover="fifth">fifth </a></li>
+                        <li><a href="page/relation-3.html" data-hover="fourth">fourth </a></li>
+                        <li><a href="page/relation-3.html" data-hover="fifth">fifth </a></li>
 					</ul>
 
 				</div>
 
 </div>
 <div id="myCarousel" class="carousel slide">
-   <!-- è½®æ’­ï¼ˆCarouselï¼‰æŒ‡æ ‡ -->
+   <!-- ÂÖ²¥£¨Carousel£©Ö¸±ê -->
    <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
    </ol>
-   <!-- è½®æ’­ï¼ˆCarouselï¼‰é¡¹ç›® -->
+   <!-- ÂÖ²¥£¨Carousel£©ÏîÄ¿ -->
    <div class="carousel-inner" style="font-family:Microsoft YaHei;color:black;">
-<div class="item active">æŒ–è€³å±ï¼Œçœ‹è€³å±</div>
-<div class="item">æ™šä¸Šç¡è§‰å–œæ¬¢ç©¿åŠ¨ç‰©å›­ç³»åˆ—ç¡è¡£</div>
-<div class="item">è¯»äºº</div>
-<div class="item">é’ˆç¸</div>
-<div class="item">å—‘ç“œå­</div>
-<div class="item">å®¿é†‰</div>
-<div class="item">å«–å¨¼</div>
-<div class="item">æ‹”ç«ç½(æœ‰å…¨å¥—çš„ç«ç½)</div>
+<div class="item active">ÍÚ¶úÊº£¬¿´¶úÊº</div>
+<div class="item">ÍíÉÏË¯¾õÏ²»¶´©¶¯ÎïÔ°ÏµÁĞË¯ÒÂ</div>
+<div class="item">¶ÁÈË</div>
+<div class="item">Õë¾Ä</div>
+<div class="item">à¾¹Ï×Ó</div>
+<div class="item">ËŞ×í</div>
+<div class="item">æÎæ½</div>
+<div class="item">°Î»ğ¹Ş(ÓĞÈ«Ì×µÄ»ğ¹Ş)</div>
 
 
 
    </div>
-   <!-- è½®æ’­ï¼ˆCarouselï¼‰å¯¼èˆª -->
+   <!-- ÂÖ²¥£¨Carousel£©µ¼º½ -->
 
 </div>
 
